* Set up static scss for recordings * S Put scroll to top back in the setVideoSize function (but with a flag to prevent it being repeatedly called when resizing a small window. This fixes the problem where on desktops, the video would go to 100dvh on small height windows  without moving the video to to thew window top.

--- a/client/src/app/video/video.component.scss
+++ b/client/src/app/video/video.component.scss
@@ -8,6 +8,16 @@
 }
 
 div.video {
+  video {
+   // max-height: calc(100dvh - 260px);
+    @media screen and (min-width: 700px) {
+      width: calc(100dvw - 360px);
+    }
+    @media screen and (max-width: 699px) {
+      width: 100dvw;
+    }
+  }
+
   @include common-characteristics;
 }
 
